--- a/info.yml
+++ b/info.yml
@@ -1,5 +1,11 @@
 name : FoxBear
-headlines :
-  - Web Development so slow, it will (not) make your head spin!
-  - Why hire us? Somebody else can probably do it better!
-  - If you're still reading this, you must not know what you're doing
+menu_items :
+  - 
+    label:
+    href:
+  - 
+    label:
+    href:
+  - 
+    label:
+    href:
