started using grunt and custom LESS -> CSS for bootstrap

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "express": "*",
     "jade": "*",
-    "yamljs": "*"
+    "yamljs": "*",
+    "grunt": "*",
+    "grunt-contrib-less": "*"
   }
 }
