updated grunt to auto-compile LESS'

--- a/package.json
+++ b/package.json
@@ -7,6 +7,15 @@
     "jade": "*",
     "yamljs": "*",
     "grunt": "*",
-    "grunt-contrib-less": "*"
+    "grunt-contrib-less": "*",
+    "grunt-contrib-watch": "~0.6.1",
+    "jit-grunt": "~0.7.0"
+  },
+  "scripts": {
+    "postinstall": "bower install",
+
+    "prestart": "npm install",
+    "start": "node app.js"
+
   }
 }
